--- a/src/component/App.css
+++ b/src/component/App.css
@@ -168,8 +168,16 @@ input[type="checkbox"]:checked {
 }
 
 @media only screen and (max-width: 410px) {
-  .app {
-    height: 102vh;
+  .states {
+    height: 60px;
+  }
+  .items {
+    font-size: 1rem;
+    margin: 0px 5px;
+  }
+  .list ul {
+    gap: 0px;
+    padding: 25px 15px;
   }
 
   .logo h1 {
